[package]
name = "varianteq"
version = "0.5.0"
authors = ["Josh Leeb-du Toit <mail@joshleeb.com>"]
edition = "2018"

description = "Derive the equality of enum variants ignoring fields"
documentation = "https://docs.rs/crate/varianteq/"
keywords = ["enum", "equality", "partialeq", "macro", "derive"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/joshleeb/varianteq"

autotests = false

[badges]
travis-ci = { repository = "joshleeb/varianteq", branch = "master" }

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"

[lib]
proc-macro = true

[[test]]
name = "tests"
